--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,55 @@
 
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 } 
 
-.square {
-
+* {
+    border: 1px dashed white;
 }
+
+body {
+    background: black;
+    color: white;
+}
+
+main {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    width: 1000px;
+    margin: 0 auto;
+}
+
+
+
+.lightCoral {
+    background-color: lightcoral;
+}
+
+
+.square-container {
+    width: 100%;
+    height: 1000px;
+    display: flex;
+    flex-wrap: wrap;
+        background: lightblue;
+}
+
+.square-easy {
+    width: calc(100% / 10);
+    height: 100px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.square-medium {
+    width: calc(100% / 9);
+    height: 111.11px;
+}
+.square-hard {
+    width: calc(100% / 7);
+    height: 142.85px;
+}
+
+
